# tstflat

./: .gitignore  CMakeLists.txt  book_reader.cpp  reader.cpp  writer.cpp
schema/: Book.fbs  CMakeLists.txt  Person.fbs
tests/: test_read_write.py
